logoutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-logoutput
          persistentVolumeClaim:
            claimName: logoutput-claim
      containers:
      - name: logoutput-generator
        image: jkur00/logoutput-generator:1.0.3
        volumeMounts:
          - name: shared-logoutput
            mountPath: /usr/src/app/logs # default directory to use for both apps
      - name: logoutput-reader
        image: jkur00/logoutput-reader:1.0.5
        volumeMounts:
          - name: shared-logoutput
            mountPath: /usr/src/app/logs # default directory to use for both apps
