logoutput/manifests/ingress.yaml
#This ingress is shared between logoutput and pingpong apps
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: logoutput-svc
            port: 
              number: 3005 # Same as port in service.yaml
      - pathType: Prefix
        path: "/pingpong"
        backend:
          service:
            name: pingpongapp-svc
            port:
              number: 3003 # Same as in service.yaml of pingpongapp
